# gpu-on-golem-poc

./: .gitignore  README.md  provider-installation.md  pyproject.toml  requirements.txt
api/: app.py  choices.py  log.ini  log.yml  redis_functions.py  requirements.txt  stable_diffusion_service.py  stable_diffusion_task.py
api/images/: README.md
api/routers/: jobs.py  monitoring.py
api/stable_diffusion/: automatic_proxy.py  automatic_service.py  service.py  task.py
api/static/: README.md
api/systemd/: golem-ai-sd.service  golem-ai.target
automatic_proxy/: README.md
automatic_proxy/provider/: Dockerfile  proxy.conf  run_service.sh  runpod.Dockerfile  start.sh  wait_for_service.sh
automatic_proxy/requestor/: automatic_service.py  service.py
automatic_proxy_oobabooga/provider/: Dockerfile  run_service.sh  run_service_local.sh  wait_for_service.sh
bloom_petals/provider/: Dockerfile  README.md  generate.py  run_service.sh  (+1 more)
client/: .env.local  .prettierrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js
config/: __init__.py
cuda_base/: Dockerfile  README.md
discord/: bot.py  requirements.txt
gpu_on_golem_poc/: __main__.py
provider/: Dockerfile  README.md  automatic.conf  generate.sh  generate_wait.sh  main.py  requirements.txt  run_service.sh  run_task.sh  service.py  testing_ram_usage_main.py  worker.py
rent_golem/: .env-example  README.md  docker-compose.yaml
rent_gpu/: README.md
templates/: index.html  job-detail.html
website/: app.py  pubsub.py  requirements.txt  stable_diffusion.py  stable_diffusion_service.py
(+164 files in other folders)
