[tool.poetry]
name = "gpu-on-golem-poc"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@wave460.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yapapi = "^0.12.0"
opencv-python = "^4.9.0.80"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
